Minor readability and cosmetic fixes

--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -249,7 +249,7 @@
 
 .button:default {
     -fx-background-color: -fx-focus-color;
-    -fx-text-fill: #ffffff;
+    -fx-text-fill: white;
 }
 
 .button:default:hover {
@@ -381,7 +381,7 @@
     -fx-border-radius: 2;
     -fx-background-radius: 2;
     -fx-font-size: 11;
-    -fx-font-family: "Segoe UI Semibold";
+    -fx-font-family: "Segoe UI Bold";
     -fx-text-fill: white;
 }
 
@@ -394,5 +394,5 @@
 }
 
 .status-checkedout {
-    -fx-background-color: #D64545; /* soft red */
+    -fx-background-color: #C44242; /* soft red */
 }
